# i2c_sensors

./: .gitignore  LICENSE  README.md  copy_2_pi.sh  demo_read.py  install_i2c_pm.yml  power_monitor.config  power_monitor.py  pyproject.toml  requirements.txt  udp_mon.py
docs/: DSM_PWR_i2C_registers.xlsx  DSP_Power_revB_I2C.pptx
i2c_sensors/: __init__.py  adc128d818.py  base.py  bmp280.py  cli.py  ds3231.py  export.py  hw611.py  i2c_adapter.py  i2c_device.py  i2c_device_ftdi.py  i2c_device_smbus.py  i2c_ftdi_adapter.py  i2c_smbus_adapter.py  ina260.py  utils.py
power_monitor/: power_monitor.config  power_monitor.py  power_monitor_config.py
tests/: test_export.py  test_power_monitor_config.py  test_utils.py
